--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  collection: ^1.16.0
+  badges: ^3.1.1
+  provider: ^6.0.5
 
 
   cupertino_icons: ^1.0.2
@@ -23,8 +26,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
   flutter_lints: ^2.0.0
 
 
@@ -34,7 +35,7 @@ flutter:
 
 
   assets:
-    - assets/images/
+    - assets/images/logoifsp.png
   
 
   
